--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
   - pip install -U pip
   - pip install -U pytest
   - pip install codecov
-script: pyhton hello_world.py
+script: python hello_world.py
 after_success: codecov
